demo/service-mesh/demo/bookinfo.yaml
## Copyright Istio Authors
##
##   Licensed under the Apache License, Version 2.0 (the "License");
##   you may not use this file except in compliance with the License.
##   You may obtain a copy of the License at
##
##       http://www.apache.org/licenses/LICENSE-2.0
##
##   Unless required by applicable law or agreed to in writing, software
##   distributed under the License is distributed on an "AS IS" BASIS,
##   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##   See the License for the specific language governing permissions and
##   limitations under the License.
#
###################################################################################################
## This file defines the services, service accounts, and deployments for the Bookinfo sample.
##
## To apply all 4 Bookinfo services, their corresponding service accounts, and deployments:
##
##   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml
##
## Alternatively, you can deploy any resource separately:
##
##   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l service=reviews # reviews Service
##   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l account=reviews # reviews ServiceAccount
##   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l app=reviews,version=v3 # reviews-v3 Deployment
###################################################################################################
#
###################################################################################################
## Details service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: bookinfo
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  namespace: bookinfo
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: quay.io/maistra/examples-bookinfo-details-v1:2.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
#---
###################################################################################################
## Ratings service
###################################################################################################
#apiVersion: v1
#kind: Service
#metadata:
#  name: ratings
#  namespace: bookinfo
#  labels:
#    app: ratings
#    service: ratings
#spec:
#  ports:
#  - port: 9080
#    name: http
#  selector:
#    app: ratings
#---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: bookinfo-ratings
#  namespace: bookinfo
#  labels:
#    account: ratings
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: ratings-v1
#  namespace: bookinfo
#  labels:
#    app: ratings
#    version: v1
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: ratings
#      version: v1
#  template:
#    metadata:
#      annotations:
#        sidecar.istio.io/inject: "true"
#      labels:
#        app: ratings
#        version: v1
#    spec:
#      serviceAccountName: bookinfo-ratings
#      containers:
#      - name: ratings
#        image: quay.io/maistra/examples-bookinfo-ratings-v1:2.1.0
#        imagePullPolicy: IfNotPresent
#        ports:
#        - containerPort: 9080
#---
###################################################################################################
## Reviews service
###################################################################################################
#apiVersion: v1
#kind: Service
#metadata:
#  name: reviews
#  namespace: bookinfo
#  labels:
#    app: reviews
#    service: reviews
#spec:
#  ports:
#  - port: 9080
#    name: http
#  selector:
#    app: reviews
#---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: bookinfo-reviews
#  namespace: bookinfo
#  labels:
#    account: reviews
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: reviews-v1
#  namespace: bookinfo
#  labels:
#    app: reviews
#    version: v1
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: reviews
#      version: v1
#  template:
#    metadata:
#      annotations:
#        sidecar.istio.io/inject: "true"
#      labels:
#        app: reviews
#        version: v1
#    spec:
#      serviceAccountName: bookinfo-reviews
#      containers:
#      - name: reviews
#        image: quay.io/maistra/examples-bookinfo-reviews-v1:2.1.0
#        imagePullPolicy: IfNotPresent
#        env:
#        - name: LOG_DIR
#          value: "/tmp/logs"
#        ports:
#        - containerPort: 9080
#        volumeMounts:
#        - name: tmp
#          mountPath: /tmp
#        - name: wlp-output
#          mountPath: /opt/ibm/wlp/output
#      volumes:
#      - name: wlp-output
#        emptyDir: {}
#      - name: tmp
#        emptyDir: {}
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: reviews-v2
#  namespace: bookinfo
#  labels:
#    app: reviews
#    version: v2
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: reviews
#      version: v2
#  template:
#    metadata:
#      annotations:
#        sidecar.istio.io/inject: "true"
#      labels:
#        app: reviews
#        version: v2
#    spec:
#      serviceAccountName: bookinfo-reviews
#      containers:
#      - name: reviews
#        image: quay.io/maistra/examples-bookinfo-reviews-v2:2.1.0
#        imagePullPolicy: IfNotPresent
#        env:
#        - name: LOG_DIR
#          value: "/tmp/logs"
#        ports:
#        - containerPort: 9080
#        volumeMounts:
#        - name: tmp
#          mountPath: /tmp
#        - name: wlp-output
#          mountPath: /opt/ibm/wlp/output
#      volumes:
#      - name: wlp-output
#        emptyDir: {}
#      - name: tmp
#        emptyDir: {}
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: reviews-v3
#  namespace: bookinfo
#  labels:
#    app: reviews
#    version: v3
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: reviews
#      version: v3
#  template:
#    metadata:
#      annotations:
#        sidecar.istio.io/inject: "true"
#      labels:
#        app: reviews
#        version: v3
#    spec:
#      serviceAccountName: bookinfo-reviews
#      containers:
#      - name: reviews
#        image: quay.io/maistra/examples-bookinfo-reviews-v3:2.1.0
#        imagePullPolicy: IfNotPresent
#        env:
#        - name: LOG_DIR
#          value: "/tmp/logs"
#        ports:
#        - containerPort: 9080
#        volumeMounts:
#        - name: tmp
#          mountPath: /tmp
#        - name: wlp-output
#          mountPath: /opt/ibm/wlp/output
#      volumes:
#      - name: wlp-output
#        emptyDir: {}
#      - name: tmp
#        emptyDir: {}
#---
###################################################################################################
## Productpage services
###################################################################################################
#apiVersion: v1
#kind: Service
#metadata:
#  name: productpage
#  namespace: bookinfo
#  labels:
#    app: productpage
#    service: productpage
#spec:
#  ports:
#  - port: 9080
#    name: http
#  selector:
#    app: productpage
#---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: bookinfo-productpage
#  namespace: bookinfo
#  labels:
#    account: productpage
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: productpage-v1
#  namespace: bookinfo
#  labels:
#    app: productpage
#    version: v1
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: productpage
#      version: v1
#  template:
#    metadata:
#      annotations:
#        sidecar.istio.io/inject: "true"
#      labels:
#        app: productpage
#        version: v1
#    spec:
#      serviceAccountName: bookinfo-productpage
#      containers:
#      - name: productpage
#        image: quay.io/maistra/examples-bookinfo-productpage-v1:2.1.0
#        imagePullPolicy: IfNotPresent
#        ports:
#        - containerPort: 9080
#        volumeMounts:
#        - name: tmp
#          mountPath: /tmp
#      volumes:
#      - name: tmp
#        emptyDir: {}
#---
